--- a/HTML/9_HW_Coffee_BS/index.html
+++ b/HTML/9_HW_Coffee_BS/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="container">
-    <div class="header container">
+    <div class="header">
         <h1 class="">The Best Coffee Regions</h1>
     </div>
     <main class="row col-lg-12">
